--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,9 +1,5 @@
 # Settings
-setting.multiplayerpause-toasts.name = Show Pause Toasts
-setting.multiplayerpause-toats.description = Shows a notification at the top of the screen when the game is paused or unpaused
-setting.multiplayerpause-syncon.name = Sync Server to clients
-setting.multiplayerpause-syncon.description = Sync Server to clients when a client pauses, Keep off for campaign hosting
-setting.multiplayerpause-allowany.name = Allow Non Admins To Pause
-setting.multiplayerpause-allowany.description = Allows all players in the lobby with the mod to pause the game, Ignored if Sync on is enabled
-setting.multiplayerpause-schedulesync.name = Schedule Syncs If Needed
-setting.multiplayerpause-schedulesync.description = Syncs can only happen once every 5 seconds, Ignored When Sync on is disabled
+setting.Normal-toasts.name = Show Pause Toasts
+setting.Normal-toasts.description = Shows a notification at the top of the screen when the game is paused or unpaused
+setting.MP-AllClientsCanPause.name = Allow Non Admins To Pause
+setting.MP-AllClientsCanPause.description = Allows all players in the lobby with the mod to pause the game
