--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 # Settings
-setting.Normal-toasts.name = Show Pause Toasts
-setting.Normal-toasts.description = Shows a notification at the top of the screen when the game is paused or unpaused
-setting.MP-AllClientsCanPause.name = Allow Non Admins To Pause
-setting.MP-AllClientsCanPause.description = Allows all players in the lobby with the mod to pause the game
+setting.normal-toasts.name = Show Pause Toasts
+setting.normal-toasts.description = Shows a notification at the top of the screen when the game is paused or unpaused
+setting.mp-allclientscanpause.name = Allow Non Admins To Pause
+setting.mp-allclientscanpause.description = Allows all players in the lobby with the mod to pause the game
