--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,10 +2,10 @@
 setting.multiplayerpause-toasts.name = Show Pause Toasts
 setting.multiplayerpause-toats.description = Shows a notification at the top of the screen when the game is paused or unpaused
 setting.multiplayerpause-allowany.name = Allow Non Admins To Pause
-setting.multiplayerpause-allowany.description = Allows all players in the lobby with the mod to pause the game
+setting.multiplayerpause-allowany.description = Allows all players in the Campaign to pause
 setting.multiplayerpause-synconpause.name = Sync On Pause
-setting.multiplayerpause-synconpause.description = Should remove any desync in item positions and such when pausing to debug designs or clogs
+setting.multiplayerpause-synconpause.description = Does Nothing Currently
 setting.multiplayerpause-synconunpause.name = Sync On Unpause
-setting.multiplayerpause-synconunpause.description = Syncing on unpause may help with any potential minor desync that this mod may cause
+setting.multiplayerpause-synconunpause.description = Does Nothing Currently (TM)
 setting.multiplayerpause-schedulesync.name = Schedule Syncs If Needed
-setting.multiplayerpause-schedulesync.description = Syncs can only happen once every 5 seconds, this will delay them as needed
+setting.multiplayerpause-schedulesync.description = Will be Removed/Replaced for Pause-locking
